Fixed all the remarks of the mentor.